switch game don't need to disconnect